web: fix relationships table names overflow

--- a/operation_sunrise/priv/static/css/app.css
+++ b/operation_sunrise/priv/static/css/app.css
@@ -81,6 +81,8 @@
 }
 .relationships-table [role="colheader"] {
     padding: 0.35rem 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .relationships-table .xx-body [role="row"]:nth-child(2n) {
     background-color: #fafafa;
